--- a/vue/src/styles/index.scss
+++ b/vue/src/styles/index.scss
@@ -134,6 +134,10 @@ code {
     padding: 20px;
 }
 
+.card-header{
+    font-size: 20px;
+}
+
 .components-container {
     margin: 30px 50px;
     position: relative;
